--- a/gmg_1/templates/attendance/lrequest.html
+++ b/gmg_1/templates/attendance/lrequest.html
@@ -1,10 +1,80 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Leave rquest</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Leave Request</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script>
+  var disabledDates = ['01/02/2017', '1/1/2017'];
+
+$(function(){
+
+    $('#datepicker').datepicker({
+
+        dateFormat: 'dd/mm/yy',
+        beforeShowDay: editDays
+
+    });
+
+
+    function editDays(date) {
+        for (var i = 0; i < disabledDates.length; i++) {
+            if (new Date(disabledDates[i]).toString() == date.toString()) {             
+                 return [false];
+            }
+        }
+         var weekenddate = $.datepicker.noWeekends(date);
+         return weekenddate; 
+     }   
+
+});
+$(function(){
+
+    $('#datepicker2').datepicker({
+
+        dateFormat: 'dd/mm/yy',
+        beforeShowDay: editDays
+
+    });
+
+
+    function editDays(date) {
+        for (var i = 0; i < disabledDates.length; i++) {
+            if (new Date(disabledDates[i]).toString() == date.toString()) {             
+                 return [false];
+            }
+        }
+         var weekenddate = $.datepicker.noWeekends(date);
+         return weekenddate; 
+     }   
+
+});
+  </script>
+  
+    <style type="text/css">
+     .ui-state-holiday .ui-state-default, .ui-datepicker-week-end .ui-state-default {
+    color: red;
+}
+.ui-datepicker-header
+  {
+    background: #4386f2;
+  }
+
+  </style>
+
+ 
 </head>
 <body>
-apply request
-
+<form class="lrequest" method="post" action="/lrequestConfirmed/">
+{% csrf_token %}
+<p>Date From: <input type="text" id="datepicker" required="true"></p><br/>
+<p>Date To: <input type="text" id="datepicker2" required="true"></p><br/>
+<p>Reason :<input type="text" name="reason" required="true"></p>
+<button>Send</button>
+ </form>
+ 
 </body>
 </html>
