--- a/gmg_1/templates/attendance/lrequest.html
+++ b/gmg_1/templates/attendance/lrequest.html
@@ -70,9 +70,11 @@ $(function(){
 <body>
 <form class="lrequest" method="post" action="/lrequestConfirmed/">
 {% csrf_token %}
-<p>Date From: <input type="text" id="datepicker" required="true"></p><br/>
-<p>Date To: <input type="text" id="datepicker2" required="true"></p><br/>
-<p>Reason :<input type="text" name="reason" required="true"></p>
+<p>Date From: <input type="text" id="datepicker" name="datef" required="true"></p><br/>
+<p>Date To: <input type="text" id="datepicker2" name="datet" required="true"></p><br/>
+<p>Type:</p><input type="radio" name="type" value="cleave" checked> Casual leave<br>
+ <input type="radio" name="type" value="sleave" > Sick Leave<br>
+<p>Reason :<input type="text" name="reason" name="reason" required="true"></p>
 <button>Send</button>
  </form>
  
