--- a/gmg_1/templates/attendance/lrequest.html
+++ b/gmg_1/templates/attendance/lrequest.html
@@ -14,7 +14,7 @@ $(function(){
 
     $('#datepicker').datepicker({
 
-        dateFormat: 'dd/mm/yy',
+        dateFormat: 'yy-mm-dd',
         beforeShowDay: editDays
 
     });
@@ -35,7 +35,7 @@ $(function(){
 
     $('#datepicker2').datepicker({
 
-        dateFormat: 'dd/mm/yy',
+        dateFormat: 'yy-mm-dd',
         beforeShowDay: editDays
 
     });
