--- a/gmg_1/templates/attendance/lrequest.html
+++ b/gmg_1/templates/attendance/lrequest.html
@@ -72,8 +72,8 @@ $(function(){
 {% csrf_token %}
 <p>Date From: <input type="text" id="datepicker" name="datef" required="true"></p><br/>
 <p>Date To: <input type="text" id="datepicker2" name="datet" required="true"></p><br/>
-<p>Type:</p><input type="radio" name="type" value="cleave" checked> Casual leave<br>
- <input type="radio" name="type" value="sleave" > Sick Leave<br>
+<p>Type:</p><input type="radio" name="type" value="CL" checked> Casual leave<br>
+ <input type="radio" name="type" value="CL" > Sick Leave<br>
 <p>Reason :<input type="text" name="reason" name="reason" required="true"></p>
 <button>Send</button>
  </form>
