finished overview need to fix leave request

--- a/gmg_1/templates/attendance/home.html
+++ b/gmg_1/templates/attendance/home.html
@@ -4,8 +4,13 @@
 	<title>welcome</title>
 </head>
 <body>
-welcome {{employee.salary}}<br/>
+welcome
+sl={{sl}}<br/>
+cl={{cl}}<br/>
+el={{el}}<br/>
 <a href="/lrequest/">leave request</a>
 <a href="/logout/">logout</a>
+<a href="/overview/">overview</a>
+<a href="/approve_leave/">approve leave</a>
 </body>
 </html>
