--- a/gmg_1/templates/attendance/login.html
+++ b/gmg_1/templates/attendance/login.html
@@ -30,9 +30,10 @@
       <input type="text" name="username" placeholder="username"/>
       <input type="password" name="password" placeholder="password"/>
       <button>login</button>
-      <button action="/adminlogin/">admin</button>
-      <p class="message">Forget password? <a href="#">Contact</a></p>
     </form>
+
+      <a href="/adminlogin/"><button>ADMIN</button></a>
+      <p class="message">Forget password? <a href="#">Contact</a></p>
   </div>
 </div>
 
