--- a/gmg_1/templates/attendance/dailyreport.html
+++ b/gmg_1/templates/attendance/dailyreport.html
@@ -68,15 +68,29 @@ $(function(){
  
 </head>
 <body>
-<form class="lrequest" method="post" action="/lrequestConfirmed/">
+<form class="daily" method="post" action="/dailyreport/">
 {% csrf_token %}
-<p>Date From: <input type="text" id="datepicker" name="datef" required="true"></p><br/>
-<p>Date To: <input type="text" id="datepicker2" name="datet" required="true"></p><br/>
-<p>Type:</p><input type="radio" name="type" value="CL" checked> Casual leave<br>
- <input type="radio" name="type" value="CL" > Sick Leave<br>
-<p>Reason :<input type="text" name="reason" name="reason" required="true"></p>
+<p>Date: <input type="text" id="datepicker" name="datef" required="true"></p><br/>
+
 <button>Send</button>
  </form>
+
+<table style="width:100%">
+  <tr>
+    <th>eid</th>
+    <th>status</th> 
+    <th>timein</th>
+    <th>timeout</th>
+  </tr>
+    {% for item in dalist %}
+       <tr>
+        <td>{{ item.emp_id }}</td>
+        <td>{{ item.status }}</td>
+        <td>{{ item.time_in }}</td>
+        <td>{{ item.time_out }}</td>
+       </tr>
+    {% endfor %}
+</table>
  
 </body>
 </html>
