--- a/gmg_1/templates/attendance/adminhome.html
+++ b/gmg_1/templates/attendance/adminhome.html
@@ -8,12 +8,12 @@ welcome admin
 
 <a href="/dailyreport/">daily report</a>
 <a href="/customreport/">custom report</a>
-<a href="/approveleaves/">approve leaves</a>
-<a href="/editunauth/">edit unauthorized</a>
+<a href="/adminapprove_leave/">approve leaves</a>
+<a href="/unauthorised/">edit unauthorized</a>
 <a href="/grant other leave/">grant other leave</a>
 <a href="/adduser/">add new employee</a>
 <a href="/logout/">logout</a>
-<a href="/editemp/">edit employees </a>
+<a href="/edituser/">edit employees </a>
 <a href="/log/">logs</a>
 </body>
 </html>
