implemented log functionality

--- a/gmg_1/templates/attendance/adminhome.html
+++ b/gmg_1/templates/attendance/adminhome.html
@@ -14,6 +14,6 @@ welcome admin
 <a href="/adduser/">add new employee</a>
 <a href="/logout/">logout</a>
 <a href="/edituser/">edit employees </a>
-<a href="/log/">logs</a>
+<a href="/logs/">logs</a>
 </body>
 </html>
