--- a/gmg_1/templates/attendance/adminapproveleave.html
+++ b/gmg_1/templates/attendance/adminapproveleave.html
@@ -33,7 +33,7 @@ welcome
        </tr>
     {% endfor %}
 </table>
-<a href="/home/">go back home</a>
+<a href="/adminshome/">go back home</a>
 
 
 </body>
