implemented other leaves

--- a/gmg_1/templates/attendance/adminhome.html
+++ b/gmg_1/templates/attendance/adminhome.html
@@ -10,7 +10,7 @@ welcome admin
 <a href="/customreport/">custom report</a>
 <a href="/adminapprove_leave/">approve leaves</a>
 <a href="/unauthorised/">edit unauthorized</a>
-<a href="/grant other leave/">grant other leave</a>
+<a href="/addotherleave/">grant other leave</a>
 <a href="/adduser/">add new employee</a>
 <a href="/logout/">logout</a>
 <a href="/edituser/">edit employees </a>
