--- a/gmg_1/templates/attendance/approve_leave.html
+++ b/gmg_1/templates/attendance/approve_leave.html
@@ -35,6 +35,9 @@ welcome
 </table>
 <a href="/home/">go back home</a>
 
-
+<a href="/lrequest/">leave request</a>
+<a href="/logout/">logout</a>
+<a href="/overview/">overview</a>
+<a href="/approve_leave/">approve leave</a>
 </body>
 </html>
