--- a/gmg_1/templates/attendance/lrequest.html
+++ b/gmg_1/templates/attendance/lrequest.html
@@ -77,6 +77,9 @@ $(function(){
 <p>Reason :<input type="text" name="reason" name="reason" required="true"></p>
 <button>Send</button>
  </form>
- 
+ <a href="/lrequest/">leave request</a>
+<a href="/logout/">logout</a>
+<a href="/overview/">overview</a>
+<a href="/approve_leave/">approve leave</a>
 </body>
 </html>
