--- a/gmg_1/templates/attendance/home.html
+++ b/gmg_1/templates/attendance/home.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>welcome</title>
-</head>
-<body>
-welcome
+{% extends 'base.html' %}
+{% block content %}
+welcome {{fname|capfirst}} {{lname|capfirst}}
 sl={{sl}}<br/>
 cl={{cl}}<br/>
 el={{el}}<br/>
-<a href="/lrequest/">leave request</a>
-<a href="/logout/">logout</a>
-<a href="/overview/">overview</a>
-<a href="/approve_leave/">approve leave</a>
-</body>
-</html>
+{% endblock %}
+
