--- a/gmg_1/templates/attendance/home.html
+++ b/gmg_1/templates/attendance/home.html
@@ -1,4 +1,4 @@
-{% extends 'attendence/base.html' %}
+{% extends 'attendance/base.html' %}
 {% block content %}
 welcome {{fname|capfirst}} {{lname|capfirst}}
 sl={{sl}}<br/>
