--- a/gmg_1/templates/attendance/base.html
+++ b/gmg_1/templates/attendance/base.html
@@ -4,11 +4,11 @@
   <title>Employee Portal</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="../../font-awesome-4.7.0/css/font-awesome.min.css">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -32,15 +32,15 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendence <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#"></a></li>
-            <li><a href="#">Attendence Overview</a></li>
-            <li><a href="#">Leave Request</a></li>
+            <li><a href="">Attendence Overview</a></li>
+            <li><a href="/lrequest/">Leave Request</a></li>
           </ul>
         </li>
         <li><a href="#">Approve Leave</a></li>
              </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span>Home </a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+        <li><a href="/home/"><span class="glyphicon glyphicon-user"></span>Home </a></li>
+        <li><a href="/logout/"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
       </ul>
     </div>
   </div>
