--- a/gmg_1/templates/attendance/base.html
+++ b/gmg_1/templates/attendance/base.html
@@ -32,11 +32,11 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendence <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#"></a></li>
-            <li><a href="">Attendence Overview</a></li>
+            <li><a href="/overview/">Attendence Overview</a></li>
             <li><a href="/lrequest/">Leave Request</a></li>
           </ul>
         </li>
-        <li><a href="#">Approve Leave</a></li>
+        <li><a href="/approve_leave/">Approve Leave</a></li>
              </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/home/"><span class="glyphicon glyphicon-user"></span>Home </a></li>
