--- a/gmg_1/templates/attendance/base.html
+++ b/gmg_1/templates/attendance/base.html
@@ -1,34 +1,42 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Employee Portal</title>
+ 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="../../font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  {% block header %}
+  {% endblock %}
+<link rel="stylesheet" href="{% static 'font-awesome-4.7.0/css/font-awesome.min.css' %}">
+<style type="text/css">
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  .img-responsive  {
+    margin: 0 auto;
+}
+</style>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container">
-	<div class="header">
-		<div class="logo_banner"><img class="img-responsive logo" src="../img/gmg_logo.png" alt="Good Methods Global"></div>
-	</div><!--header -->
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+<div class="container-fluid">
+  <div class="row">
+  
+      <nav class="navbar navbar-inverse">
+        
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
       </button>
       <a class="navbar-brand" href="http://www.goodmethodsglobal.com/">Good Methods Globals</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-                <li class="dropdown">
+        <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendence <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#"></a></li>
@@ -36,20 +44,21 @@
             <li><a href="/lrequest/">Leave Request</a></li>
           </ul>
         </li>
-        <li><a href="/approve_leave/">Approve Leave</a></li>
+        <li><a href="#">Approve Leave</a></li>
              </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/home/"><span class="glyphicon glyphicon-user"></span>Home </a></li>
         <li><a href="/logout/"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
       </ul>
     </div>
-  </div>
-</nav>
   
-<div class="container">
+</nav>
+  <div class="container text-center">
 {% block content %}
 {% endblock %}
 </div>
+</div>
+
 
 </body>
 </html>
