--- a/gmg_1/templates/attendance/home.html
+++ b/gmg_1/templates/attendance/home.html
@@ -19,7 +19,7 @@
         }
     .panel-default >.panel-heading#el
         {
-        	background-color: #db0404;
+        	background-color: #f91d09;
         }
   </style>
 
