--- a/gmg_1/templates/attendance/approve_leave.html
+++ b/gmg_1/templates/attendance/approve_leave.html
@@ -1,11 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>welcome</title>
-</head>
-<body>
-welcome 
-<table style="width:100%">
+{% extends 'attendance/base.html' %}
+{% load staticfiles %}
+{% block header %}
+  <title>Approve Leaves</title>
+  <style type="text/css">
+    .table-responsive
+    {
+      padding-top: 50px;
+    }
+  </style>
+
+{% endblock %}
+
+
+{% block content %}
+<div class="table-responsive">          
+  <table class="table table-hover table-bordered">
+    <thead bgcolor="#6ba3ff">
   <tr>
     <th>Leave Type</th>
     <th>Date</th> 
@@ -13,6 +23,7 @@ welcome
     <th>name</th>
     <th>approve</th>
   </tr>
+  </thead>
     {% for item in rlist %}
        <tr>
         <td>{{ item.l_type }}</td>
@@ -20,21 +31,19 @@ welcome
         <td>{{ item.reason }}</td>
         <td>{{ item.emp_id.fname }}</td>
         {% if item.confirmation == 1 %}
-            <td>approved</td>
+            <td bgcolor="#3aff3a">Approved</td>
         {% else %}
             <td>
                 <form action="/approve_submit/" method="post">
                 {% csrf_token %}
                 <input type="hidden" value="{{ item.l_id }}" name="l_id"/>
-                <input type="submit" class="btn" value=Approve name="mybtn">
+                <input type="submit" class="btn" style="font-size:10pt;color:white;background-color:#16a500;border:2px 
+                solid #336600;padding:3px;" value=Approve name="mybtn">
                 </form>
             </td>
         {% endif %}
        </tr>
     {% endfor %}
 </table>
-<a href="/home/">go back home</a>
-
-
-</body>
-</html>
+</div>
+{% endblock %}
