--- a/gmg_1/templates/attendance/base.html
+++ b/gmg_1/templates/attendance/base.html
@@ -9,11 +9,16 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   {% block header %}
   {% endblock %}
-<link rel="stylesheet" href="{% static 'font-awesome-4.7.0/css/font-awesome.min.css' %}">
+<!--<link rel="stylesheet" href="{% static 'font-awesome-4.7.0/css/font-awesome.min.css' %}">-->
 <style type="text/css">
 
   .img-responsive  {
     margin: 0 auto;
+}
+.label-pill {
+  padding-right: .6em;
+  padding-left: .6em;
+  border-radius: 10rem;
 }
 </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -32,19 +37,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="http://www.goodmethodsglobal.com/">Good Methods Globals</a>
+      <a class="navbar-brand" href="/home/">Good Methods Global</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendence <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendance <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#"></a></li>
-            <li><a href="/overview/">Attendence Overview</a></li>
+            <li><a href="/overview/">Attendance Overview</a></li>
             <li><a href="/lrequest/">Leave Request</a></li>
           </ul>
         </li>
-        <li><a href="#">Approve Leave</a></li>
+        <li><a href="/approve_leave/">Approve Leave <span class="label label-pill label-danger">{{no}}</span></a></li>
              </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/home/"><span class="glyphicon glyphicon-user"></span>Home </a></li>
