User side ui updated and completed

--- a/gmg_1/templates/attendance/home.html
+++ b/gmg_1/templates/attendance/home.html
@@ -33,18 +33,18 @@
 <div class="row">
  <div class="col-sm-4">
 <div class="panel panel-default" >
-  <div class="panel-heading" id="sl"><font size="5" color="#383130"> SL</font>
+  <div class="panel-heading" id="sl"><font size="5" color="#383130"> SickLeave</font>
 </div>
   <div class="panel-body"><font size="5" >   {{sl}} </font> </div></div></div>
 
 <div class="col-sm-4">
 <div class="panel panel-default">
-  <div class="panel-heading" id="cl"><font size="5" color="#383130">CL</font></div>
+  <div class="panel-heading" id="cl"><font size="5" color="#383130">CasualLeave</font></div>
   <div class="panel-body"><font size="5" >   {{cl}} </font> </div></div></div>
 
   <div class="col-sm-4">
 <div class="panel panel-default">
-  <div class="panel-heading" id="el"><font size="5" color="#383130">EL</font></div>
+  <div class="panel-heading" id="el"><font size="5" color="#383130">EarnedLeave</font></div>
   <div class="panel-body"><font size="5" >   {{el}} </font> </div></div></div>
 </div>
 
@@ -52,18 +52,18 @@
 <div class="row">
  <div class="col-sm-4">
 <div class="panel panel-default" >
-  <div class="panel-heading" id="sl"><font size="5" color="white"> SL</font>
+  <div class="panel-heading" id="sl"><font size="5" color="white">  SickLeave</font>
 </div>
   <div class="panel-body"><font size="5" >   {{slt}} </font> </div></div></div>
 
 <div class="col-sm-4">
 <div class="panel panel-default">
-  <div class="panel-heading" id="cl"><font size="5" color="white">CL</font></div>
+  <div class="panel-heading" id="cl"><font size="5" color="white">CasualLeave</font></div>
   <div class="panel-body"><font size="5" >   {{clt}} </font> </div></div></div>
 
   <div class="col-sm-4">
 <div class="panel panel-default">
-  <div class="panel-heading" id="el"><font size="5" color="white">EL</font></div>
+  <div class="panel-heading" id="el"><font size="5" color="white">EarnedLeave</font></div>
   <div class="panel-body"><font size="5" >   {{elt}} </font> </div></div></div>
 </div>
 
