--- a/gmg_1/templates/attendance/base.html
+++ b/gmg_1/templates/attendance/base.html
@@ -37,7 +37,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="/home/">Good Methods Global</a>
+      <a class="navbar-brand" href="/home/"><img src="{% static 'gmg.png' %}" width="150px"  height="35px" "></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
