--- a/gmg_1/templates/admintemp/base.html
+++ b/gmg_1/templates/admintemp/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -28,16 +28,16 @@
 
 <div class="container-fluid">
   <div class="row">
-  
+
       <nav class="navbar navbar-inverse">
-        
+
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-          <span class="icon-bar"></span>                        
+          <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/home/"><img src="{% static 'gmg.png' %}" width="150px"  height="35px" "></a>
+      <a class="navbar-brand" href="/adminshome/"><img src="{% static 'gmg.png' %}" width="150px"  height="35px" "></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -69,11 +69,11 @@
         <li><a href="/logs/">Logs <span class="label label-pill label-danger">{{no}}</span></a></li>
              </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/home/"><span class="glyphicon glyphicon-user"></span>Home </a></li>
+        <li><a href="/adminshome/"><span class="glyphicon glyphicon-user"></span>Home </a></li>
         <li><a href="/logout/"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
       </ul>
     </div>
-  
+
 </nav>
   <div class="container text-center">
 {% block content %}
@@ -84,4 +84,3 @@
 
 </body>
 </html>
-
