--- a/gmg_1/templates/admintemp/dailyreport.html
+++ b/gmg_1/templates/admintemp/dailyreport.html
@@ -15,18 +15,32 @@
 
 .table-responsive
     {
-      padding-top: 50px;
+      padding-top: 10%;
     }
+input
+{
+  width: 25%;
+  border: 0;
+  border-bottom: 2px solid #d8d8d8;
+  padding-bottom: 1%;
+}
+input:focus {
+  border-color: #1e9ce6;
+  outline: 0;
+}
+
   </style>
+
 
 {% endblock %}
 {% block content %}
+<h2 style="color:#494a4c;">Daily Report</h2><br>
 
 <form class="daily" method="post" action="/dailyreport/">
 {% csrf_token %}
 <input type="text" id="datepicker" name="datef" required="true" placeholder="Date">
 
-<button class="btn btn-primary" style="margin-left:2%;">Send</button>
+<button class="btn btn-primary" style="margin-left:2%;">Ok</button>
  </form>
 
  <div class="table-responsive">          
@@ -67,7 +81,7 @@
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script>
-  var disabledDates = ['01/02/2017', '1/1/2017'];
+  var disabledDates = [{% for item in holidays %}'{{item.day.month}}/{{item.day.day}}/{{item.day.year}}',{% endfor %}];
 
 $(function(){
 
