--- a/gmg_1/templates/admintemp/approveleave.html
+++ b/gmg_1/templates/admintemp/approveleave.html
@@ -13,6 +13,7 @@
 
 
 {% block content %}
+<h2 style="color:#3d3e3f;">Approve Leaves</h2>
 <div class="table-responsive">          
   <table class="table table-hover table-bordered">
     <thead bgcolor="#6ba3ff">
