--- a/gmg_1/templates/admintemp/otherleave.html
+++ b/gmg_1/templates/admintemp/otherleave.html
@@ -7,7 +7,7 @@
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script>
-  var disabledDates = ['01/02/2017', '1/1/2017'];
+  var disabledDates =[{% for item in holidays %}'{{item.day.month}}/{{item.day.day}}/{{item.day.year}}',{% endfor %}];
 
 $(function(){
 
@@ -61,18 +61,33 @@ $(function(){
   {
     background: #4386f2;
   }
-
+form
+{
+  padding-top: 5%;
+}
+input
+{
+  width: 30%;
+  border: 0;
+  border-bottom: 2px solid #d8d8d8;
+  padding-bottom: 1%;
+}
+input:focus {
+  border-color: #1e9ce6;
+  outline: 0;
+}
   </style>
 {% endblock %}
 
 {% block content %}
+<h1 style="color:#292a2b;">Grant leave</h1>
 <form class="lrequest" method="post" action="/addotherleave/">
 {% csrf_token %}
-<p>Eid: <input type="text" name="eid" required="true"></p><br/>
-<p>Date From: <input type="text" id="datepicker" name="date1" required="true"></p><br/>
-<p>Date To: <input type="text" id="datepicker2" name="date2" required="true"></p><br/>
-<p>Reason :<input type="text" name="reason" name="reason" required="true"></p>
-<button>Send</button>
+<input type="text" name="eid" required="true" placeholder="E-Id"><br/><br>
+<input type="text" id="datepicker" name="date1" required="true" placeholder="Date Form"><br/><br>
+<input type="text" id="datepicker2" name="date2" required="true" placeholder="Date To"><br/><br>
+<input type="text" name="reason" name="reason" required="true" placeholder="Reason"><br><br>
+<button class="btn btn-primary">Send</button>
  </form>
 {% endblock %}
 </body>
